force-app/main/default/objects/ProgramEnrollment/fields/Academic_Term__c.field-meta.xml
<CustomField>
    <fullName>Academic_Term__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Academic Term</label>
    <referenceTo>AcademicTerm</referenceTo>
    <relationshipLabel>Program Enrollments</relationshipLabel>
    <relationshipName>Program_Enrollments</relationshipName>
    <type>Lookup</type>
</CustomField>