force-app/main/default/objects/ProgramEnrollment/fields/Academic_Year__c.field-meta.xml
<CustomField>
    <fullName>Academic_Year__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Academic Year</label>
    <referenceTo>AcademicYear</referenceTo>
    <relationshipLabel>Program Enrollments</relationshipLabel>
    <relationshipName>Program_Enrollments</relationshipName>
    <type>Lookup</type>
</CustomField>