force-app/main/default/objects/ProgramEnrollment/fields/Accept_Cas_Declaration__c.field-meta.xml
<CustomField>
    <fullName>Accept_Cas_Declaration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accept Cas Declaration</label>
    <type>Checkbox</type>
</CustomField>