force-app/main/default/objects/ProgramEnrollment/fields/Accomodation_Type__c.field-meta.xml
<CustomField>
    <fullName>Accomodation_Type__c</fullName>
    <label>Accomodation Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Male Quad</fullName>
            </value>
            <value>
                <fullName>Female Quad</fullName>
            </value>
            <value>
                <fullName>Studio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>