force-app/main/default/objects/ProgramEnrollment/fields/Application_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Application_Reference_Number__c</fullName>
    <label>Application Reference Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>