force-app/main/default/objects/ProgramEnrollment/fields/Application_Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>Application_Sub_Status__c</fullName>
    <label>Org A Application Sub Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>OrgAApplication_Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Started</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Incomplete</fullName>
            </value>
            <value>
                <fullName>Deferred Offer</fullName>
            </value>
            <value>
                <fullName>Deferral Requested</fullName>
            </value>
            <value>
                <fullName>Deferral Approved</fullName>
            </value>
            <value>
                <fullName>Verification in Progress</fullName>
            </value>
            <value>
                <fullName>Ready for Review</fullName>
            </value>
            <value>
                <fullName>Waitlisted for Interview</fullName>
            </value>
            <value>
                <fullName>Pre-Interview Rejected</fullName>
            </value>
            <value>
                <fullName>Shortlisted for Interview</fullName>
            </value>
            <value>
                <fullName>Don&apos;t send to core engine</fullName>
            </value>
            <value>
                <fullName>Interview Completed</fullName>
            </value>
            <value>
                <fullName>Post-Interview Rejected</fullName>
            </value>
            <value>
                <fullName>Waitlisted for Offer</fullName>
            </value>
            <value>
                <fullName>Shortlisted for Offer</fullName>
            </value>
            <value>
                <fullName>Offered</fullName>
            </value>
            <value>
                <fullName>Offer Accepted</fullName>
            </value>
            <value>
                <fullName>Deferred Offer Accepted</fullName>
            </value>
            <value>
                <fullName>First Installment Lapsed</fullName>
            </value>
            <value>
                <fullName>Enrolling</fullName>
            </value>
            <value>
                <fullName>Enrolled</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
            <value>
                <fullName>Pending Confirmation</fullName>
            </value>
            <value>
                <fullName>Verified</fullName>
            </value>
            <value>
                <fullName>Reviewed</fullName>
            </value>
            <value>
                <fullName>Incomplete for Test</fullName>
            </value>
            <value>
                <fullName>Deferral Accepted</fullName>
            </value>
            <value>
                <fullName>Offer Lapsed</fullName>
            </value>
            <value>
                <fullName>Deferral Lapsed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>