force-app/main/default/objects/ProgramEnrollment/fields/Bank_Branch_Name_And_Address__c.field-meta.xml
<CustomField>
    <fullName>Bank_Branch_Name_And_Address__c</fullName>
    <label>Bank Branch Name And Address</label>
    <type>TextArea</type>
</CustomField>