force-app/main/default/objects/ProgramEnrollment/fields/Bid_Points_Alloted__c.field-meta.xml
<CustomField>
    <fullName>Bid_Points_Alloted__c</fullName>
    <label>Bid Points Alloted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>