force-app/main/default/objects/ProgramEnrollment/fields/Cas_Declaration_Check_1__c.field-meta.xml
<CustomField>
    <fullName>Cas_Declaration_Check_1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cas Declaration Check 1</label>
    <type>Checkbox</type>
</CustomField>