force-app/main/default/objects/ProgramEnrollment/fields/Cas_Declaration_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Cas_Declaration_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cas Declaration Submitted</label>
    <type>Checkbox</type>
</CustomField>