force-app/main/default/objects/ProgramEnrollment/fields/Cas_Final_Q1__c.field-meta.xml
<CustomField>
    <fullName>Cas_Final_Q1__c</fullName>
    <label>Cas Final Q1</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>