force-app/main/default/objects/ProgramEnrollment/fields/Cas_Key_Highlight_1__c.field-meta.xml
<CustomField>
    <fullName>Cas_Key_Highlight_1__c</fullName>
    <label>Cas Key Highlight 1</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>