force-app/main/default/objects/ProgramEnrollment/fields/Cas_update_highlights_and_summary__c.field-meta.xml
<CustomField>
    <fullName>Cas_update_highlights_and_summary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cas update highlights and summary</label>
    <type>Checkbox</type>
</CustomField>