force-app/main/default/objects/ProgramEnrollment/fields/Cas_update_personal_details__c.field-meta.xml
<CustomField>
    <fullName>Cas_update_personal_details__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cas update personal details</label>
    <type>Checkbox</type>
</CustomField>