force-app/main/default/objects/ProgramEnrollment/fields/Cas_update_photograph__c.field-meta.xml
<CustomField>
    <fullName>Cas_update_photograph__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cas update photograph</label>
    <type>Checkbox</type>
</CustomField>