force-app/main/default/objects/ProgramEnrollment/fields/CGPA__c.field-meta.xml
<CustomField>
    <fullName>CGPA__c</fullName>
    <description>This field will store the CGPA for student across programs</description>
    <label>CGPA</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>