force-app/main/default/objects/ProgramEnrollment/fields/CGPA_Status__c.field-meta.xml
<CustomField>
    <fullName>CGPA_Status__c</fullName>
    <label>CGPA Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Meets Threshold</fullName>
            </value>
            <value>
                <fullName>Does Not meet Thresold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>