force-app/main/default/objects/ProgramEnrollment/fields/Core_CGPA__c.field-meta.xml
<CustomField>
    <fullName>Core_CGPA__c</fullName>
    <label>Core CGPA</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>