force-app/main/default/objects/ProgramEnrollment/fields/Core_Credits_Earned__c.field-meta.xml
<CustomField>
    <fullName>Core_Credits_Earned__c</fullName>
    <label>Core Credits Earned</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>