force-app/main/default/objects/ProgramEnrollment/fields/Declared_Industry_Spl_c__c.field-meta.xml
<CustomField>
    <fullName>Declared_Industry_Spl_c__c</fullName>
    <label>Declared_Industry_Spl__c</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Public Policy</fullName>
            </value>
            <value>
                <fullName>Healthcare</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
            <value>
                <fullName>Infrastructure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>