force-app/main/default/objects/ProgramEnrollment/fields/Deferred_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Deferred_Reference_Number__c</fullName>
    <label>Deferred Reference Number</label>
    <length>55</length>
    <type>Text</type>
</CustomField>