force-app/main/default/objects/ProgramEnrollment/fields/Dispatched_By_User__c.field-meta.xml
<CustomField>
    <fullName>Dispatched_By_User__c</fullName>
    <label>Dispatched By User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Program Enrollments (Dispatched By User)</relationshipLabel>
    <relationshipName>ProgramEnrollments_Dispatched_By_User</relationshipName>
    <type>Lookup</type>
</CustomField>