force-app/main/default/objects/ProgramEnrollment/fields/Elective_CGPA__c.field-meta.xml
<CustomField>
    <fullName>Elective_CGPA__c</fullName>
    <label>Elective CGPA</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>