force-app/main/default/objects/ProgramEnrollment/fields/Elective_Credits_Earned__c.field-meta.xml
<CustomField>
    <fullName>Elective_Credits_Earned__c</fullName>
    <label>Elective Credits Earned</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>