force-app/main/default/objects/ProgramEnrollment/fields/Exchange_School__c.field-meta.xml
<CustomField>
    <fullName>Exchange_School__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Exchange School</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Program Enrollments (Exchange School)</relationshipLabel>
    <relationshipName>Program_Enrollments_Exchange</relationshipName>
    <type>Lookup</type>
</CustomField>