force-app/main/default/objects/ProgramEnrollment/fields/Failed_Courses__c.field-meta.xml
<CustomField>
    <fullName>Failed_Courses__c</fullName>
    <label>Failed Courses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>