force-app/main/default/objects/ProgramEnrollment/fields/Final_Concentration__c.field-meta.xml
<CustomField>
    <fullName>Final_Concentration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Final Concentration</label>
    <referenceTo>Concentration__c</referenceTo>
    <relationshipLabel>Program Enrollments (Final Concentration)</relationshipLabel>
    <relationshipName>Program_Enrollments1</relationshipName>
    <type>Lookup</type>
</CustomField>