force-app/main/default/objects/ProgramEnrollment/fields/Final_Industry_Spl__c.field-meta.xml
<CustomField>
    <fullName>Final_Industry_Spl__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Final Industry Spl.</label>
    <referenceTo>Industry_Specialization__c</referenceTo>
    <relationshipLabel>Program Enrollments (Final Industry Spl.)</relationshipLabel>
    <relationshipName>Program_Enrollments1</relationshipName>
    <type>Lookup</type>
</CustomField>