force-app/main/default/objects/ProgramEnrollment/fields/Finance_Clearance__c.field-meta.xml
<CustomField>
    <fullName>Finance_Clearance__c</fullName>
    <label>Finance Clearance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Cleared</fullName>
            </value>
            <value>
                <fullName>Waived</fullName>
                <isActive>false</isActive>
                <label>Waived</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>