force-app/main/default/objects/ProgramEnrollment/fields/Graduation_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Graduation_Eligible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Graduation Eligible</label>
    <type>Checkbox</type>
</CustomField>