force-app/main/default/objects/ProgramEnrollment/fields/Hold_Reason__c.field-meta.xml
<CustomField>
    <fullName>Hold_Reason__c</fullName>
    <label>Hold Reason</label>
    <length>18</length>
    <type>Text</type>
</CustomField>