force-app/main/default/objects/ProgramEnrollment/fields/Hold_Status__c.field-meta.xml
<CustomField>
    <fullName>Hold_Status__c</fullName>
    <label>Hold Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Financial Hold</fullName>
            </value>
            <value>
                <fullName>Academic Hold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>