force-app/main/default/objects/ProgramEnrollment/fields/Hold_Updated_On__c.field-meta.xml
<CustomField>
    <fullName>Hold_Updated_On__c</fullName>
    <label>Hold Updated On</label>
    <type>DateTime</type>
</CustomField>