force-app/main/default/objects/ProgramEnrollment/fields/Housing_Unit__c.field-meta.xml
<CustomField>
    <fullName>Housing_Unit__c</fullName>
    <label>Housing Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quad Accomodation</fullName>
            </value>
            <value>
                <fullName>Studio Accomodation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>