force-app/main/default/objects/ProgramEnrollment/fields/Inital_Concentration__c.field-meta.xml
<CustomField>
    <fullName>Inital_Concentration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inital Concentration</label>
    <referenceTo>Concentration__c</referenceTo>
    <relationshipLabel>Program Enrollments</relationshipLabel>
    <relationshipName>Program_Enrollments</relationshipName>
    <type>Lookup</type>
</CustomField>