force-app/main/default/objects/ProgramEnrollment/fields/Inital_Industry_Spl__c.field-meta.xml
<CustomField>
    <fullName>Inital_Industry_Spl__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inital Industry Spl.</label>
    <referenceTo>Industry_Specialization__c</referenceTo>
    <relationshipLabel>Program Enrollments</relationshipLabel>
    <relationshipName>Program_Enrollments</relationshipName>
    <type>Lookup</type>
</CustomField>