force-app/main/default/objects/ProgramEnrollment/fields/ISB_Advisor__c.field-meta.xml
<CustomField>
    <fullName>ISB_Advisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ISB Advisor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Program_Enrollments</relationshipName>
    <type>Lookup</type>
</CustomField>