force-app/main/default/objects/ProgramEnrollment/fields/ISB_Enrollment_Status__c.field-meta.xml
<CustomField>
    <fullName>ISB_Enrollment_Status__c</fullName>
    <label>ISB Enrollment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enrolled</fullName>
            </value>
            <value>
                <fullName>On LOA</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
            <value>
                <fullName>Rejoined</fullName>
            </value>
            <value>
                <fullName>Under Review</fullName>
            </value>
            <value>
                <fullName>Approved By RO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>