force-app/main/default/objects/ProgramEnrollment/fields/ISB_Fee_Amount__c.field-meta.xml
<CustomField>
    <fullName>ISB_Fee_Amount__c</fullName>
    <label>ISB Fee Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>