force-app/main/default/objects/ProgramEnrollment/fields/ISB_Fee_Payment_Installments__c.field-meta.xml
<CustomField>
    <fullName>ISB_Fee_Payment_Installments__c</fullName>
    <label>ISB Fee Payment Installments</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One Installment</fullName>
            </value>
            <value>
                <fullName>Two Installments</fullName>
            </value>
            <value>
                <fullName>One Go</fullName>
                <isActive>false</isActive>
                <label>One Go</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>