force-app/main/default/objects/ProgramEnrollment/fields/ISB_Taken_Bank_Loan__c.field-meta.xml
<CustomField>
    <fullName>ISB_Taken_Bank_Loan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ISB Taken Bank Loan</label>
    <type>Checkbox</type>
</CustomField>