force-app/main/default/objects/ProgramEnrollment/fields/Last_Status_Changed__c.field-meta.xml
<CustomField>
    <fullName>Last_Status_Changed__c</fullName>
    <label>Last Status Changed</label>
    <type>DateTime</type>
</CustomField>