force-app/main/default/objects/ProgramEnrollment/fields/Learning_Program__c.field-meta.xml
<CustomField>
    <fullName>Learning_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Learning Program</label>
    <referenceTo>LearningProgram</referenceTo>
    <relationshipLabel>Program Enrollments</relationshipLabel>
    <relationshipName>Program_Enrollments</relationshipName>
    <type>Lookup</type>
</CustomField>