force-app/main/default/objects/ProgramEnrollment/fields/Letter_Grade__c.field-meta.xml
<CustomField>
    <fullName>Letter_Grade__c</fullName>
    <label>Letter Grade (Partner University)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>