force-app/main/default/objects/ProgramEnrollment/fields/LMS_CGPA__c.field-meta.xml
<CustomField>
    <fullName>LMS_CGPA__c</fullName>
    <label>LMS CGPA</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>