force-app/main/default/objects/ProgramEnrollment/fields/LMS_Cum_Credits__c.field-meta.xml
<CustomField>
    <fullName>LMS_Cum_Credits__c</fullName>
    <label>LMS Cumulative Credits</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>