force-app/main/default/objects/ProgramEnrollment/fields/LMS_Grade_Points__c.field-meta.xml
<CustomField>
    <fullName>LMS_Grade_Points__c</fullName>
    <label>LMS Grade Points</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>