force-app/main/default/objects/ProgramEnrollment/fields/Loan_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Loan_Account_Number__c</fullName>
    <label>Loan Account Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>