force-app/main/default/objects/ProgramEnrollment/fields/Loan_UTR_Number__c.field-meta.xml
<CustomField>
    <fullName>Loan_UTR_Number__c</fullName>
    <label>Loan UTR Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>