force-app/main/default/objects/ProgramEnrollment/fields/New_admits_CAS_Q1__c.field-meta.xml
<CustomField>
    <fullName>New_admits_CAS_Q1__c</fullName>
    <label>New admits _CAS Q1</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>