force-app/main/default/objects/ProgramEnrollment/fields/OrgAApplication_Status__c.field-meta.xml
<CustomField>
    <fullName>OrgAApplication_Status__c</fullName>
    <description>The status of the application process.</description>
    <inlineHelpText>The status of the application review process.</inlineHelpText>
    <label>Org A Application Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Started</fullName>
                <label>Application in Progress</label>
            </value>
            <value>
                <fullName>Applied</fullName>
            </value>
            <value>
                <fullName>Incomplete</fullName>
            </value>
            <value>
                <fullName>Verification in Progress</fullName>
            </value>
            <value>
                <fullName>Shortlisting in Progress</fullName>
            </value>
            <value>
                <fullName>Not Shortlisted for Interview</fullName>
            </value>
            <value>
                <fullName>Shortlisted for Interview</fullName>
            </value>
            <value>
                <fullName>Interview Completed</fullName>
            </value>
            <value>
                <fullName>Not Offered</fullName>
            </value>
            <value>
                <fullName>Waitlisted</fullName>
            </value>
            <value>
                <fullName>Offered</fullName>
            </value>
            <value>
                <fullName>Deferred Offer</fullName>
            </value>
            <value>
                <fullName>Offer Accepted</fullName>
            </value>
            <value>
                <fullName>Deferral Accepted</fullName>
            </value>
            <value>
                <fullName>Deferred Offer Accepted</fullName>
            </value>
            <value>
                <fullName>Enrolled</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
            <value>
                <fullName>Application Closed</fullName>
            </value>
            <value>
                <fullName>Offer Lapsed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>