force-app/main/default/objects/ProgramEnrollment/fields/Overall_Attempted_Credits__c.field-meta.xml
<CustomField>
    <fullName>Overall_Attempted_Credits__c</fullName>
    <label>Overall Attempted Credits</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>