force-app/main/default/objects/ProgramEnrollment/fields/Overall_Earned_Credits__c.field-meta.xml
<CustomField>
    <fullName>Overall_Earned_Credits__c</fullName>
    <label>Overall Earned Credits</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>