force-app/main/default/objects/ProgramEnrollment/fields/Partner_Transcript_Received__c.field-meta.xml
<CustomField>
    <fullName>Partner_Transcript_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Partner Transcript Received</label>
    <type>Checkbox</type>
</CustomField>