force-app/main/default/objects/ProgramEnrollment/fields/PGID__c.field-meta.xml
<CustomField>
    <fullName>PGID__c</fullName>
    <label>Student Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>