force-app/main/default/objects/ProgramEnrollment/fields/Planing_for_Bank_loan__c.field-meta.xml
<CustomField>
    <fullName>Planing_for_Bank_loan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Planing for Bank loan</label>
    <type>Checkbox</type>
</CustomField>