force-app/main/default/objects/ProgramEnrollment/fields/Pre_Term__c.field-meta.xml
<CustomField>
    <fullName>Pre_Term__c</fullName>
    <label>Pre Term</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fail</fullName>
            </value>
            <value>
                <fullName>Pass</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>